added dist libs

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,22 +8,22 @@
     <meta name="author" content="Scott Hill">
 
     <!-- Bootstrap core CSS -->
-    <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
+    <link href="/dist-libs/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
 
     <!-- Bootstrap theme -->
-    <link href="/lib/bootstrap/css/bootstrap-theme.css" rel="stylesheet">
+    <link href="/dist-libs/bootstrap/css/bootstrap-theme.css" rel="stylesheet">
 
 
     <!-- JQuery UI css -->
-    <link href="/lib/jquery-ui/jquery-ui.css" rel="stylesheet">
-    <link href="/lib/jquery-ui/jquery-ui.structure.css" rel="stylesheet">
-    <link href="/lib/jquery-ui/jquery-ui.theme.css" rel="stylesheet">
+    <link href="/dist-libs/jquery-ui/jquery-ui.css" rel="stylesheet">
+    <link href="/dist-libs/jquery-ui/jquery-ui.structure.css" rel="stylesheet">
+    <link href="/dist-libs/jquery-ui/jquery-ui.theme.css" rel="stylesheet">
 
     <!-- JQuery -->
-    <script src="/lib/jquery.js"></script>
+    <script src="/dist-libs/jquery.js"></script>
 
     <!-- JQuery UI js-->
-    <script src="/lib/jquery-ui/jquery-ui.js"></script>
+    <script src="/dist-libs/jquery-ui/jquery-ui.js"></script>
 
     <!-- My site default css -->
     <link rel="stylesheet" href="/css/style.css" />
