--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,32 +1,27 @@
 
-<div>
-<h1>Hello from {{site_name}}
-</h1>
+<div id="clues-view">
+    <div>
+        <button type="button" id="searchBtn">Search</button>
+        <input type="text" id="searchText" />
+    </div>
+    <div id="clues-list" class="list-group"></div>
 </div>
 
-<!--<div id="clues-view">-->
-    <!--<div>-->
-        <!--<button type="button" id="searchBtn">Search</button>-->
-        <!--<input type="text" id="searchText" />-->
-    <!--</div>-->
-    <!--<div id="clues-list" class="list-group"></div>-->
-<!--</div>-->
-
-<!--<script id="clueTemplate" type="text/template">-->
-    <!--<div class="list-group-item">-->
-        <!--<a href="#" class="clue list-group-item">-->
-            <!--<h4 class="list-group-item-heading"><%= category %></h4>-->
-            <!--<p class="list-group-item-text"><%= question %></p>-->
-            <!--<p class="answer list-group-item-text"></p>-->
-        <!--</a>-->
-        <!--<div class="clue-controls">-->
-            <!--<label>? <input class="guess-text" placeholder="Your guess..."/></label>-->
-            <!--<span class="results list-group-item-text"></span>-->
-            <!--&nbsp;-->
-            <!--<button type="button" class="tellme-btn btn btn-xs btn-primary">tell me</button>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</script>-->
+<script id="clueTemplate" type="text/template">
+    <div class="list-group-item">
+        <a href="#" class="clue list-group-item">
+            <h4 class="list-group-item-heading"><%= category %></h4>
+            <p class="list-group-item-text"><%= question %></p>
+            <p class="answer list-group-item-text"></p>
+        </a>
+        <div class="clue-controls">
+            <label>? <input class="guess-text" placeholder="Your guess..."/></label>
+            <span class="results list-group-item-text"></span>
+            &nbsp;
+            <button type="button" class="tellme-btn btn btn-xs btn-primary">tell me</button>
+        </div>
+    </div>
+</script>
 
 <!--<script src="/lib/bootstrap/js/bootstrap.js"></script>-->
 <!--<script src="/lib/underscore.js"></script>-->
