--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,14 +23,10 @@
     </div>
 </script>
 
-<!--<script src="/lib/bootstrap/js/bootstrap.js"></script>-->
-<!--<script src="/lib/underscore.js"></script>-->
-<!--<script src="/lib/backbone.js"></script>-->
-
-<!--<script src="/js/models/clue.js"></script>-->
-<!--<script src="/js/collections/clues.js"></script>-->
-<!--<script src="/js/views/clue.js"></script>-->
-<!--<script src="/js/views/clues.js"></script>-->
-<!--<script src="/js/app.js"></script>-->
+<script src="/js/models/clue.js"></script>
+<script src="/js/collections/clues.js"></script>
+<script src="/js/views/clue.js"></script>
+<script src="/js/views/clues.js"></script>
+<script src="/js/app.js"></script>
 
 
