--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,16 +19,9 @@
     <link href="/dist-libs/jquery-ui/jquery-ui.structure.css" rel="stylesheet">
     <link href="/dist-libs/jquery-ui/jquery-ui.theme.css" rel="stylesheet">
 
-    <!-- JQuery -->
-    <!--<script src="/dist-libs/jquery.js"></script>-->
-    <!-- JQuery UI js-->
-    <!--<script src="/dist-libs/jquery-ui/jquery-ui.js"></script>-->
-
-    <script src="/js/bundle.js"></script>
-
-    <!--<script src="/js/app.js"></script>-->
-
-
+    <script src="/dist-libs/bootstrap/js/bootstrap.js"></script>
+    <script src="/dist-libs/underscore.js"></script>
+    <script src="/dist-libs/backbone.js"></script>
 
     <!-- My site default css -->
     <link rel="stylesheet" href="/css/style.css" />
