put api info back

--- a/views/api.hbs
+++ b/views/api.hbs
@@ -1,7 +1,15 @@
 
-<a href="/api/clues/">/api/clues/</a><br/>
 
-<a href="/api/clues/553c7dcba2ed2bc710a7ff4f">/api/clues/553c7dcba2ed2bc710a7ff4f</a><br/>
+<p>The api provides question data from the db, called 'clues'. Two basic GET functions are provided:</p>
+
+<p>All clues:</p>
+<a href="/api/clues/">/api/clues/</a>
+
+<br/><br/>
+
+<p>A single clue by {id}:</p>
+/api/clues/{id}
+
 
 
 
