--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -57,6 +57,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="/about">About</a></li>
+                    <li><a href="/api">API</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
