--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,10 @@
 
 <div id="clues-view">
     <div>
-        <button type="button" id="searchBtn">Search</button>
+        search/filter
         <input type="text" id="searchText" />
     </div>
+    </br>
     <div id="clues-list" class="list-group"></div>
 </div>
 
