cat filter heading

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 
 <div id="clues-view">
-    <div>
-        search/filter
+    <div style="text-align:right">
+        category filter
         <input type="text" id="searchText" />
     </div>
     </br>
