--- a/views/api.hbs
+++ b/views/api.hbs
@@ -1,9 +1,14 @@
 
 
-<p>The api provides question data from the db, called 'clues'. Two basic GET functions are provided:</p>
+<p>The api provides question data from the db, called 'clues'. Three basic GET functions are provided:</p>
 
 <p>All clues:</p>
 <a href="/api/clues/">/api/clues/</a>
+
+<br/><br/>
+
+<p>Random clues:</p>
+<a href="/api/clues/r/5">/api/clues/r/5</a>
 
 <br/><br/>
 
