--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -71,4 +71,13 @@
     <!--</div>-->
 
 </body>
+
+
+<script src="/js/models/clue.js"></script>
+<script src="/js/collections/clues.js"></script>
+<script src="/js/views/clue.js"></script>
+<script src="/js/views/clues.js"></script>
+<script src="/js/app.js"></script>
+
+
 </html>
