switched to postgres

--- a/views/api.hbs
+++ b/views/api.hbs
@@ -1,19 +1,19 @@
 
 
-<p>The api provides question data from the db, called 'clues'. Three basic GET functions are provided:</p>
+<p>The api provides question data from the db, called 'clues'.</p>
 
-<p>All clues:</p>
+<p>Get 1000 random  clues:</p>
 <a href="/api/clues/">/api/clues/</a>
 
-<br/><br/>
+<!--<br/><br/>-->
 
-<p>Random clues:</p>
-<a href="/api/clues/r/5">/api/clues/r/5</a>
+<!--<p>Random clues:</p>-->
+<!--<a href="/api/clues/r/5">/api/clues/r/5</a>-->
 
-<br/><br/>
+<!--<br/><br/>-->
 
-<p>A single clue by {id}:</p>
-/api/clues/{id}
+<!--<p>A single clue by {id}:</p>-->
+<!--/api/clues/{id}-->
 
 
 
