renamed publc js views

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,8 +26,8 @@
 
 <script src="/js/models/clue.js"></script>
 <script src="/js/collections/clues.js"></script>
-<script src="/js/views/clue.js"></script>
-<script src="/js/views/clues.js"></script>
+<script src="/js/views/clue_view.js"></script>
+<script src="/js/views/clues_view.js"></script>
 <script src="/js/app.js"></script>
 
 
