--- a/views/index.hbs
+++ b/views/index.hbs
@@ -29,5 +29,9 @@
 <script src="/js/views/clue_view.js"></script>
 <script src="/js/views/clues_view.js"></script>
 <script src="/js/app.js"></script>
-
+<script>
+    $(function() {
+        new app.CluesView();
+    });
+</script>
 
