--- a/views/api.hbs
+++ b/views/api.hbs
@@ -1,19 +1,20 @@
 
 
-<p>The api provides question data from the db, called 'clues'.</p>
+<h3>API Examples</h3>
+<br/>
+<p>
+    1000 random clues: <a href="/api/clues">/api/clues</a>
+</p>
 
-<p>Get 1000 random  clues:</p>
-<a href="/api/clues/">/api/clues/</a>
+<p>
+    20 random categories: <a href="/api/cats">/api/cats</a>
+</p>
 
-<!--<br/><br/>-->
+<p>
+    clues by category: <a href="/api/clues/cat/1">/api/clues/cat/1</a>
+</p>
 
-<!--<p>Random clues:</p>-->
-<!--<a href="/api/clues/r/5">/api/clues/r/5</a>-->
 
-<!--<br/><br/>-->
-
-<!--<p>A single clue by {id}:</p>-->
-<!--/api/clues/{id}-->
 
 
 
