--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,21 +8,22 @@
     <meta name="author" content="Scott Hill">
 
     <!-- Bootstrap core CSS -->
-    <link href="/dist-libs/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
+    <link href="/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" media="screen">
 
     <!-- Bootstrap theme -->
-    <link href="/dist-libs/bootstrap/css/bootstrap-theme.css" rel="stylesheet">
+    <link href="/bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet">
 
 
     <!-- JQuery UI css -->
+    <!-- need to check why this isnt avail in the bower components -->
     <link href="/dist-libs/jquery-ui/jquery-ui.css" rel="stylesheet">
     <link href="/dist-libs/jquery-ui/jquery-ui.structure.css" rel="stylesheet">
     <link href="/dist-libs/jquery-ui/jquery-ui.theme.css" rel="stylesheet">
 
     <!-- JQuery -->
-    <script src="/dist-libs/jquery.js"></script>
-    <script src="/dist-libs/jquery-ui/jquery-ui.js"></script>
-    <script src="/dist-libs/bootstrap/js/bootstrap.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
 
     <!-- My site default css -->
