--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,8 +24,8 @@
     </div>
 </script>
 
-<script src="/dist-libs/underscore.js"></script>
-<script src="/dist-libs/backbone.js"></script>
+<script src="/bower_components/underscore/underscore.js"></script>
+<script src="/bower_components/backbone/backbone.js"></script>
 <script src="/js/models/clue.js"></script>
 <script src="/js/collections/clues.js"></script>
 <script src="/js/views/clue_view.js"></script>
